# Trip-Treasurer-Agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HELP_CONTENT.md  PLAN_v2.3.md  README.md  RELIABILITY_SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  main.py
app/agent/: intents.py  orchestrator.py  trip_resolver.py
app/agent/nodes/: commit_advance_expense.py  commit_expense.py  commit_initial_topup.py  commit_topup.py  commit_trip.py
app/channels/: mock.py  telegram.py  zalo.py
app/domain/: fund.py  fuzzy_match.py  member_resolver.py  models.py  settlement.py
app/help/: admin.md  anh.md  chi.md  chiatien.md  nap.md  overview.md  share.md  ung.md  welcome.md
app/observability/: logging.py  metrics.py  tracing.py
app/reliability/: circuit_breaker.py  retry.py
app/security/: input_validation.py  permissions.py
app/storage/: db.py
app/storage/repositories/: __init__.py  conversation_repo.py  expense_repo.py  member_repo.py  trip_repo.py
app/tools/: llm.py  ocr.py  sheet_projector.py  sheet_provisioner.py  sheets.py
app/utils/: money.py  vn_time.py
skills/skills/reliability-security/: SKILL.md
skills/skills/reliability-security/references/: circuit_breaker.py  input_validation.py  retry_configs.py
skills/skills/trip-expense-domain/: SKILL.md
skills/skills/trip-expense-domain/references/: contribution_kinds.md  fund_model.md  transaction_patterns.md
skills/skills/zalo-agent-patterns/: SKILL.md
tests/: test_circuit_breaker.py  test_e2e_mock.py  test_fund.py  test_fuzzy_match.py  test_input_validation.py  test_intents.py  test_member_resolver.py  test_money.py  test_observability.py  test_permissions.py  test_settlement.py  test_sheets.py  test_storage.py  test_telegram_channel.py  test_trip_resolver.py  test_utils.py  test_zalo_channel.py
(+2 files in other folders)
